hello single tenant relational